e2e/tests/all/snapshots/toolbar_rest_desktop.snap
---
source: e2e/src/suite.rs
description: toolbar at desktop (rest)
expression: tree
---
toolbar "Formatting" [orientation=horizontal]
  group "Style"
    button "Bold"
      StaticText "B"
    button "Italic"
      StaticText "I"
  separator [orientation=vertical]
  group "Align"
    button "Left"
      StaticText "Left"
    button "Right"
      StaticText "Right"
  button "Undo" [disabled]
    StaticText "Undo"
  combobox "Font" = Serif [expanded=false] [haspopup=listbox]
    StaticText "Serif"
  status [atomic] [live=polite]
button "after"
  StaticText "after"
