e2e/tests/all/snapshots/tooltip_focused_desktop.snap
---
source: e2e/src/suite.rs
description: tooltip at desktop (focused)
expression: tree
---
button "Before"
  StaticText "Before"
button "Save"
  StaticText "Save"
button "After"
  StaticText "After"
tooltip "Saves the draft"
  StaticText "Saves the draft"
