e2e/tests/all/snapshots/tooltip_focused_mobile.snap
---
source: e2e/src/suite.rs
description: tooltip at mobile (focused)
expression: tree
---
button "Before"
  StaticText "Before"
button "Save"
  StaticText "Save"
  generic
button "After"
  StaticText "After"
generic
  tooltip "Saves the draft"
    StaticText "Saves the draft"
