e2e/tests/all/snapshots/tooltip_rest_desktop.snap
---
source: e2e/src/suite.rs
description: tooltip at desktop (rest)
expression: tree
---
button "Before"
  StaticText "Before"
button "Save"
  description "Saves the draft"
  StaticText "Save"
button "After"
  StaticText "After"
