e2e/tests/all/snapshots/tooltip_rest_mobile.snap
---
source: e2e/src/suite.rs
description: tooltip at mobile (rest)
expression: tree
---
button "Before"
  StaticText "Before"
button "Save"
  description "Saves the draft"
  StaticText "Save"
button "After"
  StaticText "After"
