e2e/tests/all/snapshots/tour_open_desktop.snap
---
source: e2e/src/suite.rs
description: tour at desktop (open)
expression: tree
---
button "Take the tour"
  StaticText "Take the tour"
button "First"
  StaticText "First"
button "Second"
  StaticText "Second"
button "Third"
  StaticText "Third"
paragraph
dialog "First" [keyshortcuts=ArrowRight ArrowLeft] [modal]
  description "The first stop. 1 of 3"
  heading "First" [level=2]
    StaticText "First"
  button "Close tour"
  StaticText "The first stop."
  StaticText "1 of 3"
  button "Skip"
    StaticText "Skip"
  button "Next"
    StaticText "Next"
