e2e/tests/all/snapshots/tour_rest_desktop.snap
---
source: e2e/src/suite.rs
description: tour at desktop (rest)
expression: tree
---
button "Take the tour"
  StaticText "Take the tour"
button "First"
  StaticText "First"
button "Second"
  StaticText "Second"
button "Third"
  StaticText "Third"
paragraph
