e2e/tests/all/snapshots/tree-guides_rest_desktop.snap
---
source: e2e/src/suite.rs
description: tree-guides at desktop (rest)
expression: tree
---
tree "Files" [orientation=vertical]
  treeitem "src" [expanded] [level=1] [selected=false]
    StaticText "src"
    group
      treeitem "lib.rs" [current=true] [level=2] [selected=false]
        StaticText "lib.rs"
      treeitem "main.rs" [level=2] [selected=false]
        StaticText "main.rs"
  treeitem "README.md" [level=1] [selected=false]
    StaticText "README.md"
